# reddit-footprint

./: .gitattributes  .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/: raw.dvc
data/processed/: .gitignore  exclude.txt  h3_embeddings.parquet  lad_embeddings.parquet  place_regions.parquet  places.parquet  places_zero_shot.parquet  region_embeddings.parquet
data/raw/: LAD_BUC_2022.gpkg  LAD_RGN_2022.csv  RGN_EN_BUC_2022.gpkg  comments_combined-2023_02_23.parquet  places-2023_04_11.parquet
paper/: .gitignore  main.bib  main.docx  main.html  main.ipynb  main.md  main.pdf.md  main.qmd  main.tex  references.bib
paper/.jupyter_cache/: global.db
paper/_extensions/mikemahoney218/arxiv/: _extension.yml
paper/figures/: __init__.py  footprints.py  heatmap.py  intra.py  morans.py  place_vectors.py  similarity.py  workflow.drawio  zero_shot.py
paper/figures/.unused/: heatmap.py
paper/figures/workflow/: workflowfoot.drawio
paper/submission/s1/: cover_ceus.md  highlights.md  main_ceus_20-11-23.ipynb  main_ceus_20-11-23.qmd  title_ceus.md
paper/submission/s2/: reviewer_comments.md
paper/tables/: __init__.py  main.py  model_interpret.py  summary.py
src/: __init__.py  embeddings.py  preprocessing.py  topics.py  zero_shot.py
src/common/: utils.py
