[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "torch>=2.2.0",
    "sentence-transformers>=2.3.1",
    "datasets>=2.17.0",
    "polars>=0.20.7",
    "pyarrow>=15.0.0",
    "geopandas>=0.14.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "pysal>=24.1",
    "h3pandas>=0.2.6",
    "esda>=2.5.1",
    "umap-learn>=0.5.5",
    "jupyterlab>=4.1.0",
]
dev = [
    "ipdb>=0.13.13",
    "dvc>=2.58.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
